PortalPackage/ Enrollment Rx Core/objects/Prospect_Management_Points__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Code__c</fullName>
        <label>Activity Code</label>
        <picklist>
            <picklistValues>
                <fullName>Student Initiated: Individual Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attended recruitment event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Initiated: Campus Visit Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student initiated: Phone Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAFSA received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Call from Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Counselor Recommendation Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Essays Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High School Transcript Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Scores Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Initiated: Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College Transcript Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joined Facebook Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email click-click thru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web request: Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reply: Sr. Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reply: Jr. Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reply: High School Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reply: College fair</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Acvitity_Points__c</fullName>
        <label>Acvitity Points</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Prospect Management Points</relationshipLabel>
        <relationshipName>Prospect_Management_Points</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Prospect Management Point</label>
    <nameField>
        <displayFormat>PMP-{00000}</displayFormat>
        <label>Prospect Management Points Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prospect Management Points</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>